# aida-ionosphere

./: .gitignore  README.md  examples.ipynb  pyproject.toml
aida/: __init__.py  aida.py  api.py  api_config.ini  igrf.py  iri.py  logger.py  modip.py  ne.py  parameter.py
tests/: test_api.py  test_model.py  test_modip.py
