[tool.poetry]
name = "aida"
version = "0.1"
description = "AIDA ionospheric data assimilation"
authors = ["Benjamin Reid <b.reid@bham.ac.uk>"]
readme = "README.md"
homepage = "https://spaceweather.bham.ac.uk/"
packages = [
    { include = "aida" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
xarray = "=2023.3.0"
numpy = "=1.24.2"
numba = "=0.57.1"
dask = "=2023.9.3"
pandas = "=1.5.3"
scipy = "*"
h5py = "=3.8.0"
psutil = "=5.9.4"
netcdf4 = "=1.6.3"
h5netcdf = "=1.2.0"
bottleneck = "=1.3.7"
requests = "=2.28.2"
mpi4py = "*"
astropy = "*"
    
[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
matplotlib = "*"
flake8 = "*"
ipykernel = "*"
snakeviz = "*"
jinja2 = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
